fix lint errors

--- a/package.json
+++ b/package.json
@@ -2,7 +2,65 @@
   "name": "@forex-marketplace/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "// Build Scripts": "Scripts for building services and libraries",
+    "build:libs": "nx run-many --target=build --projects=shared-types,shared-utils,database,auth,grpc,message-queue",
+    "build:all": "nx run-many --target=build --all",
+    "build:user-auth": "nx build user-auth-service",
+    "build:wallet": "nx build wallet-service",
+    "build:rate": "nx build rate-service",
+    "build:transaction": "nx build transaction-service",
+    "build:notification": "nx build notification-service",
+    "// Development Scripts": "Scripts for running services in development mode",
+    "dev:user-auth": "nx serve user-auth-service",
+    "dev:wallet": "nx serve wallet-service",
+    "dev:rate": "nx serve rate-service",
+    "dev:transaction": "nx serve transaction-service",
+    "dev:notification": "nx serve notification-service",
+    "dev:all": "nx run-many --target=serve --all --parallel --maxParallel=5",
+    "// Test Scripts": "Scripts for running tests",
+    "test:all": "nx run-many --target=test --all",
+    "test:user-auth": "nx test user-auth-service",
+    "test:wallet": "nx test wallet-service",
+    "test:rate": "nx test rate-service",
+    "test:transaction": "nx test transaction-service",
+    "test:notification": "nx test notification-service",
+    "test:libs": "nx run-many --target=test --projects=shared-types,shared-utils,database,auth,grpc,message-queue",
+    "test:coverage": "nx run-many --target=test --all --codeCoverage",
+    "// Lint Scripts": "Scripts for linting code",
+    "lint": "nx run-many --target=lint --all",
+    "lint:fix": "nx run-many --target=lint --all --fix",
+    "// Docker Scripts": "Scripts for Docker operations",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:restart": "docker-compose restart",
+    "docker:logs": "docker-compose logs -f",
+    "// Migration Scripts": "Scripts for database migrations",
+    "migration:generate": "nx run database:migration:generate --name=",
+    "migration:run": "nx run database:migration:run",
+    "migration:revert": "nx run database:migration:revert",
+    "// Combined Scripts": "Combined scripts for common operations",
+    "prepare:dev": "yarn build:libs && yarn docker:up",
+    "reset:db": "docker-compose down -v && docker-compose up -d postgres",
+    "clean": "nx reset && rm -rf node_modules && yarn cache clean",
+    "reinstall": "yarn clean && yarn install",
+    "start:dev": "yarn prepare:dev && yarn dev:all",
+    "start:prod": "yarn build:all && node dist/apps/user-auth-service/main.js",
+    "// CI/CD Scripts": "Scripts for continuous integration",
+    "ci": "yarn lint && yarn test:all && yarn build:all",
+    "format": "nx format:write",
+    "format:check": "nx format:check",
+    "affected:build": "nx affected:build",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:graph": "nx affected:graph"
+  },
   "private": true,
   "dependencies": {
     "@grpc/grpc-js": "^1.13.0",
