--- a/libs/shared-utils/package.json
+++ b/libs/shared-utils/package.json
@@ -6,6 +6,8 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@nestjs/common": "11.0.11",
+    "express": "^4.17.1"
   }
 }
