--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,9 +8,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
-    "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "target": "es2020",
+    "module": "commonjs",
+    "lib": ["es2020"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
@@ -21,7 +21,9 @@
       "@forex-marketplace/message-queue": ["libs/message-queue/src/index.ts"],
       "@forex-marketplace/shared-types": ["libs/shared-types/src/index.ts"],
       "@forex-marketplace/shared-utils": ["libs/shared-utils/src/index.ts"]
-    }
+    },
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules", "tmp"]
 }
