--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:14-alpine
@@ -82,7 +80,7 @@ services:
     command: node dist/apps/rate-service/main.js
     ports:
       - '3003:3003'
-      - '5000:5000'
+      - '5001:5001'
     environment:
       - NODE_ENV=development
       - PORT=3003
@@ -91,8 +89,10 @@ services:
       - DB_USERNAME=postgres
       - DB_PASSWORD=postgres
       - DB_DATABASE=forex
-      - EXCHANGE_RATE_API_KEY=your_exchange_rate_api_key
-      - GRPC_URL=0.0.0.0:5000
+      - EXCHANGE_RATE_API_KEY=${EXCHANGE_RATE_API_KEY}
+      - GRPC_URL=0.0.0.0:5001
+    volumes:
+      - ./libs/grpc/src/lib/protos:/app/libs/grpc/src/lib/protos
     depends_on:
       postgres:
         condition: service_healthy
@@ -113,9 +113,12 @@ services:
       - DB_PASSWORD=postgres
       - DB_DATABASE=forex
       - JWT_SECRET=your_jwt_secret_key
-      - RATE_GRPC_URL=rate-service:5000
-      - WALLET_GRPC_URL=wallet-service:5001
+      - RATE_GRPC_URL=rate-service:5001
+      - WALLET_GRPC_URL=wallet-service:5002
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+    volumes:
+      - ./libs/grpc/src/lib/protos:/app/libs/grpc/src/lib/protos
+      - ./apps/transaction-service/src/app/protos:/app/apps/transaction-service/src/app/protos
     depends_on:
       - rate-service
       - wallet-service
@@ -139,11 +142,11 @@ services:
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
       - EMAIL_FROM=noreply@forex-platform.com
       # For production, add SMTP settings:
-      # - SMTP_HOST=smtp.example.com
-      # - SMTP_PORT=587
-      # - SMTP_SECURE=false
-      # - SMTP_USER=your_smtp_user
-      # - SMTP_PASSWORD=your_smtp_password
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_SECURE=false
+      - SMTP_USER=${SMTP_USER}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
     depends_on:
       rabbitmq:
         condition: service_healthy
