--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "lint:fix": "nx run-many --target=lint --all --fix",
     "// Docker Scripts": "Scripts for Docker operations",
     "docker:build": "docker-compose build",
-    "docker:up": "docker-compose up -d",
+    "docker:up": "docker-compose up",
+    "docker:up:detached": "docker-compose up -d",
+    "docker:stop": "docker-compose stop",
     "docker:down": "docker-compose down",
     "docker:restart": "docker-compose restart",
     "docker:logs": "docker-compose logs -f",
