--- a/apps/notification-service/tsconfig.app.json
+++ b/apps/notification-service/tsconfig.app.json
@@ -5,8 +5,23 @@
     "module": "commonjs",
     "types": ["node"],
     "emitDecoratorMetadata": true,
-    "target": "es2020"
+    "target": "es2020",
+    "composite": true,
+    "declaration": true
   },
-  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "exclude": [
+    "jest.config.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts",
+    "../../libs/**/*.spec.ts",
+    "../../libs/**/*.test.ts"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "../../libs/auth/src/**/*.ts",
+    "../../libs/shared-types/src/**/*.ts",
+    "../../libs/shared-utils/src/**/*.ts",
+    "../../libs/database/src/**/*.ts",
+    "../../libs/message-queue/src/**/*.ts"
+  ]
 }
