implement auth guard and restructure response format

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ DB_DATABASE=forex
 JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRES_IN=7d
 
+# Admin User
+ADMIN_EMAIL=admin@forex-marketplace.com
+ADMIN_PASSWORD=Admin@123456
+ADMIN_FIRSTNAME=Super
+ADMIN_LASTNAME=Admin
+
 # RabbitMQ
 RABBITMQ_URL=amqp://guest:guest@localhost:5672
 
