--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "reinstall": "yarn clean && yarn install",
     "start:dev": "yarn prepare:dev && yarn dev:all",
     "start:prod": "yarn build:all && node dist/apps/user-auth-service/main.js",
+    "// Admin Scripts": "Scripts for admin operations",
+    "create:admin": "nx build user-auth-service && node dist/apps/user-auth-service/cli.js create-admin",
     "// CI/CD Scripts": "Scripts for continuous integration",
     "ci": "yarn lint && yarn test:all && yarn build:all",
     "format": "nx format:write",
@@ -84,6 +86,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
+    "nest-commander": "^3.12.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
