--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,18 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7-alpine
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ['CMD', 'redis-cli', 'ping']
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   user-auth-service:
     build:
       context: .
@@ -46,6 +58,8 @@ services:
       - JWT_SECRET=your_jwt_secret_key
       - JWT_EXPIRES_IN=7d
       - GRPC_URL=0.0.0.0:5003
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
       # Admin user credentials
       - ADMIN_EMAIL=${ADMIN_EMAIL:-admin@forex-marketplace.com}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-Admin@123456}
@@ -56,6 +70,8 @@ services:
       - '5003:5003'
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     volumes:
       - ./libs/grpc/src/lib/protos:/app/libs/grpc/src/lib/protos
@@ -78,6 +94,8 @@ services:
       - JWT_SECRET=your_jwt_secret_key
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
       - GRPC_URL=0.0.0.0:5002
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     ports:
       - '3002:3002'
       - '5002:5002'
@@ -89,6 +107,8 @@ services:
       postgres:
         condition: service_healthy
       rabbitmq:
+        condition: service_healthy
+      redis:
         condition: service_healthy
 
   rate-service:
@@ -107,6 +127,8 @@ services:
       - DB_DATABASE=forex
       - EXCHANGE_RATE_API_KEY=${EXCHANGE_RATE_API_KEY}
       - GRPC_URL=0.0.0.0:5001
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     ports:
       - '3003:3003'
       - '5001:5001'
@@ -115,6 +137,8 @@ services:
       - ./docker-entrypoint.sh:/app/docker-entrypoint.sh
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
 
   transaction-service:
@@ -136,6 +160,8 @@ services:
       - WALLET_GRPC_URL=wallet-service:5002
       - USER_GRPC_URL=user-auth-service:5003
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     ports:
       - '3004:3004'
     volumes:
@@ -146,6 +172,7 @@ services:
       - rate-service
       - wallet-service
       - user-auth-service
+      - redis
 
   notification-service:
     build:
@@ -163,6 +190,8 @@ services:
       - DB_DATABASE=forex
       - JWT_SECRET=your_jwt_secret_key
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
       - EMAIL_FROM=noreply@forex-platform.com
       # For production, add SMTP settings:
       - SMTP_HOST=${SMTP_HOST}
@@ -179,6 +208,9 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_healthy
 
 volumes:
   postgres_data:
+  redis_data:
