--- a/package.json
+++ b/package.json
@@ -79,12 +79,14 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/ioredis": "^5.0.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "nest-commander": "^3.12.0",
     "nodemailer": "^6.10.0",
