--- a/libs/auth/package.json
+++ b/libs/auth/package.json
@@ -10,6 +10,7 @@
     "@nestjs/common": "11.0.11",
     "@nestjs/jwt": "11.0.0",
     "@nestjs/passport": "11.0.5",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "@nestjs/core": "^11.0.11"
   }
 }
