--- a/libs/shared-utils/package.json
+++ b/libs/shared-utils/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "tslib": "^2.3.0",
     "@nestjs/common": "11.0.11",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ioredis": "^5.3.0",
+    "rxjs": "^7.8.0",
+    "@nestjs/core": "11.0.11"
   }
 }
