--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "nx build",
     "test": "nx test",
     "// Build Scripts": "Scripts for building services and libraries",
-    "build:libs": "nx run-many --target=build --projects=shared-types,shared-utils,database,auth,grpc,message-queue",
-    "build:all": "nx run-many --target=build --all",
+    "copy:protos": "mkdir -p dist/libs/grpc/protos && cp -r libs/grpc/src/lib/protos/* dist/libs/grpc/protos/",
+    "build:libs": "nx run-many --target=build --projects=shared-types,shared-utils,database,auth,grpc,message-queue && yarn copy:protos",
+    "build:all": "nx run-many --target=build --all && yarn copy:protos",
     "build:user-auth": "nx build user-auth-service",
     "build:wallet": "nx build wallet-service",
     "build:rate": "nx build rate-service",
