fix connection issues

--- a/.env.example
+++ b/.env.example
@@ -31,13 +31,7 @@ RABBITMQ_URL=amqp://guest:guest@localhost:5672
 # Exchange Rate API
 EXCHANGE_RATE_API_KEY=81e6508c84aeffda6b10f8b9
 
-# gRPC
-# GRPC_URL=0.0.0.0:5002  # Removing this generic variable
-RATE_GRPC_URL=localhost:5011
-WALLET_GRPC_URL=localhost:5012
-USER_GRPC_URL=localhost:5013
-TRANSACTION_GRPC_URL=localhost:5014
-NOTIFICATION_GRPC_URL=localhost:5015
+
 
 # Email
 EMAIL_FROM=noreply@forex-platform.com
@@ -51,9 +45,22 @@ SMTP_PASSWORD=HHvgDZdDfSfgmNJJNu
 USER_AUTH_PORT=3001
 WALLET_PORT=3002
 RATE_PORT=3003
-TRANSACTION_PORT=3004
-NOTIFICATION_PORT=3005
+TRANSACTION_PORT=3014
+NOTIFICATION_PORT=3006
 
+# Service gRPC ports
+USER_AUTH_GRPC_PORT=5013
+WALLET_GRPC_PORT=5002
+RATE_GRPC_PORT=5011
+TRANSACTION_GRPC_PORT=5014
+NOTIFICATION_GRPC_PORT=5006
+
+# Service gRPC URLs
+USER_GRPC_URL=localhost:5013
+WALLET_GRPC_URL=localhost:5002
+RATE_GRPC_URL=localhost:5011
+TRANSACTION_GRPC_URL=localhost:5014
+NOTIFICATION_GRPC_URL=localhost:5006
 
 # Redis
 REDIS_HOST=localhost
