fix readme and other errors

--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,7 @@ EXCHANGE_RATE_API_KEY=81e6508c84aeffda6b10f8b9
 EMAIL_FROM=noreply@forex-platform.com
 SMTP_HOST=smtp.ethereal.email
 SMTP_PORT=587
-SMTP_SECURE=true
+SMTP_SECURE=false
 SMTP_USER=lyric39@ethereal.email
 SMTP_PASSWORD=HHvgDZdDfSfgmNJJNu
 
